# MetalCoordAnalysis

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py  stats.py  tutorial.rst  update.py
.github/workflows/: python-package.yml
analysis/: chemistry.py  stats.py  structures.py
load/: rcsb.py
metalCoord/: __init__.py  cli.py  config.py  debug.py  debug_domain.py  logging.py  run.py  services.py
metalCoord/analysis/: __init__.py  chemistry.py  classes.py  classify.py  cluster.py  cod.py  data.py  directional.py  metal.py  models.py  stats.py  structures.py  utlis.py
metalCoord/cif/: utils.py
metalCoord/cli/: __init__.py  parser.py
metalCoord/cli/commands/: __init__.py  batch.py  common.py  coord.py  pdb.py  stats.py  table.py  update.py
metalCoord/cod/: structure.py
metalCoord/correspondense/: __init__.py  procrustes.py
metalCoord/data/: ideal.csv  ideal_cova_rad_for_all_elememt.list  metal-metal distances.json  mons.json
metalCoord/load/: rcsb.py
metalCoord/logging/: __init__.py  logging.py
metalCoord/service/: analysis.py  info.py
results/: FES.json  FES2.json
tests/data/models/: 3kw8.cif  4dl8.cif  4dl8.cif_AF3.json  4dl8.cif_AF3.json.debug.json  8tnv.cif  (+10 more)
tests/functional/: conftest.py  test_batch_mode.py  test_cl.py  test_debug_mode_stats.py  test_debug_mode_update.py  test_stats_mode.py  test_stats_mode_af3.py  test_stats_mode_cu.py  test_table_mode.py  test_update_mode.py
tests/matching/: test_core.py  test_ideal_self_matching.py
tutorial/: 3kw8_CU_mc-c3.json  3kw8_CU_mc.json  3kw8_NA_mc.json  4dl8_AF3_mc.json  4dl8_MG_mc.json  4dl8_NA_mc.json  4dl8_mc_restraints.mmcif  4dl8_mc_restraints.txt  4dl8_mc_restraints_coot.txt  4dl8_servalcat.mmcif  8tnv_mc_restraints.mmcif  8tnv_mc_restraints.txt  8tnv_mc_restraints_coot.txt  8tnv_nopairs.mmcif  8tnv_nopairs_equivalents.json  8tnv_nopairs_mc.json  json2restraints.py  traingles.py  triangles.py  tutorial.rst
(+7 files in other folders)
