[tool.poetry]
name = "metalcoordanalysis"
version = "0.1.4"
description = ""
authors = ["Kave"]
readme = "README.md"
packages = [{include = "metalCoord"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = ">=1.20"
pandas = ">=2.0.0"
tensorflow = ">=2.9.1"
tqdm = ">=4.0.0"
scipy = ">=1.0.0"
gemmi = "^0.6.3"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
